[package]
name = "bean-rs"
version = "0.0.0"
edition = "2024"
description = "Rust crate for dealing with beancount data"
readme = "readme.md"
license = "MIT"
repository = "https://github.com/RuairidhWilliamson/beancount-rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
csv = "1.4.0"
jiff = { version = "0.2.29", features = ["serde"] }
nom = "8.0.0"
pdfium = "0.10.4"
regex = "1.12.4"
rust_decimal = "1.42.1"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.3"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
# Cargo
wildcard_dependencies = "warn"
# cargo_common_metadata = "warn"

# Restriction
allow_attributes = "warn"
clone_on_ref_ptr = "warn"
create_dir = "warn"
dbg_macro = "warn"
exit = "warn"
undocumented_unsafe_blocks = "warn"
unused_result_ok = "warn"
unused_trait_names = "warn"

# Nursery
nursery = { level = "warn", priority = -1 }
cognitive_complexity = "allow"
missing_const_for_fn = "allow"
non_send_fields_in_send_ty = "allow"
option_if_let_else = "allow"
significant_drop_tightening = "allow"
suboptimal_flops = "allow"
useless_let_if_seq = "allow"

# Pedantic
pedantic = { level = "warn", priority = -1 }
cast_precision_loss = "allow"
default_trait_access = "allow"
map_unwrap_or = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
struct_excessive_bools = "allow"
unnecessary_debug_formatting = "allow"
